--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "run-bot": "tsx --env-file=.env ./src/entryPoints/runLiquidationBot.ts",
+    "show": "tsx --env-file=.env ./src/entryPoints/showLiquidablePositions.ts",
+    "liquidate": "tsx --env-file=.env ./src/entryPoints/liquidatePositions.ts"
+  },
   "dependencies": {
+    "lodash": "^4.17.21",
     "tsx": "^4.12.0",
     "typescript": "^5.4.5",
     "viem": "^2.13.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.2",
     "prettier": "^3.3.1"
   }
